updated index/lasagna and style.css files

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Second Odin Proj</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="./recipes/lasagna.html">Lasagna recipe</a></p>
-        <p><a href="./recipes/Pepperoni_Pizza.html">Pepperoni Pizza recipe</a></p>
+        <p id="recipe1"><a href="./recipes/lasagna.html">Lasagna recipe</a></p>
+        <p id="recipe2"><a href="./recipes/Pepperoni_Pizza.html">Pepperoni Pizza recipe</a></p>
     </body>
 </html>
