--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,38 +1,48 @@
-<h1>Lasagna Recipe</h1>
-<img src="../Images/Lasagna_image.jpg" alt="Image-Lasagna">
-<h4>History of Lasagna</h4>
-<p>Originally, the word lasagna was used to describe a pot in which food was being cooked rather than the pasta itself.  Lasagna recipes have been around for ages, dating back to as early as the thirteenth century.  Today, lasagnas come in all kinds of varieties from veggies and cream sauces to traditional sauce and cheese lasagnas as well as meat lasagnas.</p>
-<p>Originated in Italy during the middle ages, lasagna has been attributed to the city of Naples.</p>
-<h4>Ingredients</h4>
-<p>For the meat sauce:</p>
-<ul>
-    <li>2 teaspoons extra virgin olive oil</li>
-    <li>1 pound ground beef chuck</li>
-    <li>1/2 medium onion, diced (about 3/4 cup)</li>
-    <li>1/2 large bell pepper (green, red, or yellow), diced (about 3/4 cup)</li>
-    <li>2 cloves garlic, minced</li>
-    <li>1 (28-ounce)can good-quality tomato sauce</li>
-    <li>3 ounces tomato paste (half a 6-ounce can)</li>
-    <li>1 (14 ounce) can crushed tomatoes</li>
-    <li>2 tablespoons chopped fresh oregano, or 2 teaspoons dried oregano</li>
-    <li>1/4 cup chopped fresh parsley (preferably flat leaf), packed</li>
-    <li>1 tablespoon Italian seasoning</li>
-    <li>1 pinch garlic powder and/or garlic salt</li>
-    <li>1 tablespoon red or white wine vinegar</li>
-    <li>1 tablespoon to 1/4 cup sugar (to taste, optional)</li>
-    <li>Salt</li>
-</ul>
-<hp>To assemble the lasagna:</p>
-<ul>
-    <li>1/2 pound dry lasagna noodles (requires 9 lasagna noodles - unbroken)</li>
-    <li>15 ounces ricotta cheese</li>
-    <li>1 1/2 pounds (24 ounces) mozzarella cheese, grated or sliced</li>
-    <li>1/4 pound (4 ounces) freshly grated Parmesan cheese</li>
-</ul>
-<h4>Steps</h4>
-<ol>
-    <li>Start by making the sauce with ground beef, bell peppers, onions, and a combo of tomato sauce, tomato paste, and crushed tomatoes. The three kinds of tomatoes gives the sauce great depth of flavor.</li>
-    <li>Let this simmer while you boil the noodles and get the cheeses ready. We're using ricotta, shredded mozzarella, and parmesan -- like the mix of tomatoes, this 3-cheese blend gives the lasagna great flavor!</li>
-    <li>From there, it's just an assembly job. A cup of meat sauce, a layer of noodles, more sauce, followed by a layer of cheese. Repeat until you have three layers and have used up all the ingredients.</li>
-    <li>Bake until bubbly and you're ready to eat!</li>
-</ol>
+<html>
+    <head>
+        <link rel="stylesheet" href="../style.css">
+
+    </head>
+
+    <body>
+        <h1>Lasagna Recipe</h1>
+        <img src="../Images/Lasagna_image.jpg" alt="Image-Lasagna">
+        <h4>History of Lasagna</h4>
+        <p>Originally, the word lasagna was used to describe a pot in which food was being cooked rather than the pasta itself.  Lasagna recipes have been around for ages, dating back to as early as the thirteenth century.  Today, lasagnas come in all kinds of varieties from veggies and cream sauces to traditional sauce and cheese lasagnas as well as meat lasagnas.</p>
+        <p>Originated in Italy during the middle ages, lasagna has been attributed to the city of Naples.</p>
+        <h4>Ingredients</h4>
+        <p>For the meat sauce:</p>
+        <ul>
+            <li>2 teaspoons extra virgin olive oil</li>
+            <li>1 pound ground beef chuck</li>
+            <li>1/2 medium onion, diced (about 3/4 cup)</li>
+            <li>1/2 large bell pepper (green, red, or yellow), diced (about 3/4 cup)</li>
+            <li>2 cloves garlic, minced</li>
+            <li>1 (28-ounce)can good-quality tomato sauce</li>
+            <li>3 ounces tomato paste (half a 6-ounce can)</li>
+            <li>1 (14 ounce) can crushed tomatoes</li>
+            <li>2 tablespoons chopped fresh oregano, or 2 teaspoons dried oregano</li>
+            <li>1/4 cup chopped fresh parsley (preferably flat leaf), packed</li>
+            <li>1 tablespoon Italian seasoning</li>
+            <li>1 pinch garlic powder and/or garlic salt</li>
+            <li>1 tablespoon red or white wine vinegar</li>
+            <li>1 tablespoon to 1/4 cup sugar (to taste, optional)</li>
+            <li>Salt</li>
+        </ul>
+        <hp>To assemble the lasagna:</p>
+        <ul>
+            <li>1/2 pound dry lasagna noodles (requires 9 lasagna noodles - unbroken)</li>
+            <li>15 ounces ricotta cheese</li>
+            <li>1 1/2 pounds (24 ounces) mozzarella cheese, grated or sliced</li>
+            <li>1/4 pound (4 ounces) freshly grated Parmesan cheese</li>
+        </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>Start by making the sauce with ground beef, bell peppers, onions, and a combo of tomato sauce, tomato paste, and crushed tomatoes. The three kinds of tomatoes gives the sauce great depth of flavor.</li>
+            <li>Let this simmer while you boil the noodles and get the cheeses ready. We're using ricotta, shredded mozzarella, and parmesan -- like the mix of tomatoes, this 3-cheese blend gives the lasagna great flavor!</li>
+            <li>From there, it's just an assembly job. A cup of meat sauce, a layer of noodles, more sauce, followed by a layer of cheese. Repeat until you have three layers and have used up all the ingredients.</li>
+            <li>Bake until bubbly and you're ready to eat!</li>
+        </ol>
+    </body>
+</html>
+    
